feat: add open telemetry library and jaeger UI

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -9,7 +9,16 @@ services:
     ports:
       - "27017:27017"
     healthcheck:
-      test: ["CMD", "mongo"]
+      test: [ "CMD", "mongo" ]
       interval: 10s
       timeout: 10s
       retries: 5
+
+  jaeger:
+    image: jaegertracing/all-in-one:latest
+    ports:
+      - "16686:16686"
+      - "4317:4317"
+      - "4318:4318"
+    environment:
+      - COLLECTOR_OTLP_ENABLED=true
